fixed toggle button mobile issue the navbar issue

--- a/react_proj/react-intro/src/react-theme.css
+++ b/react_proj/react-intro/src/react-theme.css
@@ -192,7 +192,7 @@ button {
 
 .theme-toggle {
   position: fixed;
-  top: 15px;
+  top: 70px;  
   right: 15px;
-  z-index: 999;
+  z-index: 2000;  
 }
